# GoogleTest-simple-excercises

./: .clang-format  .gitignore  README.md
AAA/: CMakeLists.txt
AssertionsOnVectors/: CMakeLists.txt
CallBacks/: EmployeeManager.cpp  IDatabaseConnection.cpp  IDatabaseConnection.hpp  testRunner.cpp
GoogleMockProject/: CMakeLists.txt
InvokingActions/: testRunner.cpp
Matchers/: CMakeLists.txt  EmployeeManager.hpp  IDatabaseConnection.hpp  testRunner.cpp
MockMethodsCurrentWay/: testRunner.cpp
MockingPrivateAndStaticMethods/: IDatabaseConnection.cpp  IDatabaseConnection.hpp  main.cpp  testRunner.cpp
PartialRunning/: CMakeLists.txt
TestExceptions/: CMakeLists.txt  testRunner.cpp
TestFixtures/NoFixtures/: CMakeLists.txt
TestParameterizedTests/: CMakeLists.txt  testRunner.cpp
setup-test/: CMakeLists.txt  LibraryCode.cpp  main.cpp  test.cpp
